# text2sim-MCP-server

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  SD_IMPLEMENTATION_PLAN.md  des-config-schema.json  des-simpy-compatible-schema.json  mcp_server.py  pyproject.toml  test_sd_fixes.py
DES/: README.md  des_simulator.py  des_utils.py  replication_analysis.py  schema_validator.py  simulator.py  unified_simulator.py
SD/: README.md  model_converter.py  sd_integration.py  sd_utils.py
SD/json_extensions/: __init__.py
SD/json_extensions/adapters/: __init__.py  abstract_model_adapter.py
SD/json_extensions/schema/: __init__.py  serialization.py  validator.py
SD/json_extensions/schemas/: __init__.py  abstract_model_v2.json
SD/models/: Teacup.py  metadata.json
common/: __init__.py  model_state_manager.py  multi_schema_validator.py  schema_documentation.py  schema_registry.py  template_manager.py
docs/: Multiple_Replications_Guide.md  PYSD_AST_STRUCTURES_GUIDE.md  PYSD_JSON_SCHEMA_INTEGRATION.md  SD_KNOWN_LIMITATIONS.md
examples/: bass_diffusion_corrected.json
examples/DES/: claude-test-prompt.md
examples/SD/: sample_prompts.md
mcp_server/: __init__.py  __main__.py  registry.py  server.py
mcp_server/shared/: __init__.py  error_handlers.py  integration_layer.py  response_builders.py
mcp_server/tools/: __init__.py  des_tools.py  model_mgmt_tools.py  sd_tools.py  template_tools.py  validation_tools.py
model_builder/: __init__.py  multi_schema_validator.py  schema_documentation.py  schema_registry.py
schemas/DES/: README.md  des-simpy-compatible-schema.json  json-to-simulation-flow.md
schemas/SD/: README.md  abstract_model_v2.json
templates/DES/: hospital_triage.json  single_server_queue.json
templates/SD/: economic_growth.json  inventory_management.json  population_growth.json  sir_epidemiology.json
