[project]
name = "text2sim-MCP-server"
version = "2.6.0"
description = "A multi-paradigm simulation engine that supports Discrete-Event Simulation (DES) with SimPy and System Dynamics (SD) with PySD. Features advanced Model Builder tools for iterative, conversational model development. Integrates with LLMs through the Model Context Protocol (MCP) to enable sophisticated simulation capabilities in natural language environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
    "simpy>=4.1.1,<5.0.0",
    "pysd>=3.14.3,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "numpy>=2.3.3",
    "jsonschema>=4.20.0,<5.0.0",
]

[project.scripts]
text2sim-mcp = "mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "black>=25.1.0",
    "ruff>=0.12.0",
]
